# scriptcast

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTIVES.md  Makefile  README.md  cliff.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  publish-pages.yml  publish-pypi.yml  release.yml
examples/: .gitignore  basic.sc  basic.sh  demo.sh  fake-db  fake-myapp  showcase.sh  tutorial.sh
scriptcast/: __main__.py  config.py  directives.py  export.py  frame.py  generator.py  gif.py  model.py  parser.py  recorder.py  registry.py  svg_frame.py  theme.py
scriptcast/assets/themes/: aurora.sh  dark.sh  light.sh
scriptcast/shell/: __init__.py  adapter.py  bash.py  zsh.py
tests/: test_cli.py  test_config.py  test_directives.py  test_export.py  test_frame.py  test_generator.py  test_gif.py  test_integration.py  test_model.py  test_parser.py  test_recorder.py  test_registry.py  test_shell.py  test_svg_frame.py  test_theme.py
