[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptcast"
version = "0.1.0"
description = "Generate terminal demos (asciinema casts & GIFs) from simple shell-like scripts."
requires-python = ">=3.10"
authors = [
    {name = "Nasser Alansari", email = "dacrystal@users.noreply.github.com"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "pillow>=9.0",
]

[project.scripts]
scriptcast = "scriptcast.__main__:cli"

[project.optional-dependencies]
dev = [
    "asciinema>=2.4.0",
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
scriptcast = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["PIL", "PIL.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Entry-point group for third-party directives. See DIRECTIVES.md.
[project.entry-points."scriptcast.directives"]
