[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"


[project]
name = "scriptcast"
dynamic = ["version", "readme"]
description = "Generate terminal demos (asciinema casts & GIFs) from simple shell-like scripts."
requires-python = ">=3.10"
authors = [
    {name = "Nasser Alansari", email = "dacrystal@users.noreply.github.com"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "pillow>=9.0",
]

[project.urls]
"Homepage" = "https://dacrystal.github.io/scriptcast"
"Source Code" = "https://github.com/dacrystal/scriptcast"
"Issues" = "https://github.com/dacrystal/scriptcast/issues"

[project.scripts]
scriptcast = "scriptcast.__main__:cli"

[project.optional-dependencies]
dev = [
    "asciinema>=2.4.0",
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "git-cliff>=2.0",
    "hatch-vcs>=0.4",
    "hatch-fancy-pypi-readme",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["scriptcast"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["PIL", "PIL.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Entry-point group for third-party directives. See DIRECTIVES.md.
[project.entry-points."scriptcast.directives"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\(assets/'
replacement = "(https://raw.githubusercontent.com/dacrystal/scriptcast/main/assets/"
